--- a/walkthroughs/howto-ingress-gateway/infrastructure/ecs-service.yaml
+++ b/walkthroughs/howto-ingress-gateway/infrastructure/ecs-service.yaml
@@ -24,6 +24,10 @@ Parameters:
     Description: AppMesh xds endpoint
     Type: String
 
+  LoadBalancerCertificateArn:
+    Description: NLB TLS Certificate Arn
+    Type: String
+
   LoadBalancerPath:
     Type: String
     Default: "*"
@@ -581,7 +585,7 @@ Resources:
   ColorGatewayService:
     Type: 'AWS::ECS::Service'
     DependsOn:
-      - WebLoadBalancerRule
+      - PublicLoadBalancerListener
     Properties:
       Cluster:
         'Fn::ImportValue': !Sub "${EnvironmentName}:ECSCluster"
@@ -607,43 +611,30 @@ Resources:
           ContainerPort: 9080
           TargetGroupArn: !Ref WebTargetGroup
 
-  PublicLoadBalancerSG:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription: Access to the public facing load balancer
-      VpcId:
-        'Fn::ImportValue': !Sub "${EnvironmentName}:VPC"
-      SecurityGroupIngress:
-          - CidrIp: 0.0.0.0/0
-            IpProtocol: -1
-
   # public ALB for color gateway
   PublicLoadBalancer:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties:
       Scheme: internet-facing
-      LoadBalancerAttributes:
-        - Key: idle_timeout.timeout_seconds
-          Value: '30'
       Subnets:
         - { 'Fn::ImportValue': !Sub "${EnvironmentName}:PublicSubnet1" }  
         - { 'Fn::ImportValue': !Sub "${EnvironmentName}:PublicSubnet2" }  
-      SecurityGroups: [!Ref 'PublicLoadBalancerSG']
+      Type: network
 
   WebTargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
-      HealthCheckIntervalSeconds: 6
+      HealthCheckIntervalSeconds: 30
       HealthCheckPath: /server_info
       HealthCheckPort: 9901
       HealthCheckProtocol: HTTP
-      HealthCheckTimeoutSeconds: 5
-      HealthyThresholdCount: 2
+      HealthCheckTimeoutSeconds: 6
+      HealthyThresholdCount: 3
       TargetType: ip
       Name: !Sub "${EnvironmentName}-web"
-      Port: 80
-      Protocol: HTTP
-      UnhealthyThresholdCount: 2
+      Port: 443
+      Protocol: TLS
+      UnhealthyThresholdCount: 3
       TargetGroupAttributes:
         - Key: deregistration_delay.timeout_seconds
           Value: 120
@@ -659,20 +650,10 @@ Resources:
         - TargetGroupArn: !Ref WebTargetGroup
           Type: 'forward'
       LoadBalancerArn: !Ref 'PublicLoadBalancer'
-      Port: 80
-      Protocol: HTTP
-
-  WebLoadBalancerRule:
-    Type: AWS::ElasticLoadBalancingV2::ListenerRule
-    Properties:
-      Actions:
-        - TargetGroupArn: !Ref WebTargetGroup
-          Type: 'forward'
-      Conditions:
-        - Field: path-pattern
-          Values: [!Ref 'LoadBalancerPath']
-      ListenerArn: !Ref PublicLoadBalancerListener
-      Priority: 1
+      Port: 443
+      Protocol: TLS
+      Certificates:
+        - CertificateArn: !Sub '${LoadBalancerCertificateArn}'
 
 Outputs: 
 
